--- a/src/components/Annonce/Annonce.scss
+++ b/src/components/Annonce/Annonce.scss
@@ -43,8 +43,7 @@
       gap: 10px;
       padding: 20px;
       background-color: #1a1a1a;
-      width: 25%;
-      min-width: 250px;
+      height: 100vh;
 
       label {
         margin-bottom: 5px;
@@ -216,6 +215,7 @@
     gap: 10px;
     padding: 10px 20px;
     width: 100%;
+    height: auto;
     background-color: #1a1a1a;
     justify-content: space-between;
   }
