CSS Profil no responsive

--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -15,7 +15,27 @@
 
 .profile_main {
   width: 80%;
-  padding: 20px;
+  padding: 50px;
+}
+
+/* .profile_main-h1 */
+
+.ranks-list {
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px;
+  width: 250px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 0.7rem;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .games {
@@ -35,11 +55,10 @@
 
 .ranks {
   display: flex;
-  flex-direction: column;
-
-  div {
-    margin-right: 10px;
-  }
+  flex-direction: row;
+  gap: 25px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .description {
@@ -59,44 +78,34 @@
   margin-top: 25px;
 }
 
-.ranks-list {
-  display: flex;
-  padding: 0.5em 0;
-}
-
 .ranks-list .left p {
   align-items: center;
+  width: 100%;
 }
 
 .ranks-list .left {
-  display: flex;
-  width: 50%;
+  width: 60%;
 }
 
 .ranks-list .left p {
   padding: 5px 8px;
-  background-color: #cbcaca;
   border-radius: 15px;
   margin-inline: 5px;
-  width: 33%;
-  display: flex;
+  gap: 5px;
 }
 
 .ranks-list p:first-child {
+  font-size: 1.5rem;
   padding: 5px 8px;
-  background-color: #1d0101;
-  color: #fff;
+  color: $color-bg;
   border-radius: 15px;
   margin-inline: 5px;
   align-items: center;
 }
 
 .ranks-list-desc {
-  width: 50%;
+  width: 90%;
   align-content: center;
-}
-
-.ranks-list-desc {
   padding: 5px 8px;
   background-color: #cbcaca;
   border-radius: 15px;
