--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -356,7 +356,8 @@
   #sw-js-blob-svg {
     position: absolute;
     z-index: 0;
-    top: 1200px;
+    top: 150px;
+    left:0px;
     width: 500px;
   }
 
