--- a/src/components/Profil/SideBar/Sidebar.scss
+++ b/src/components/Profil/SideBar/Sidebar.scss
@@ -41,3 +41,20 @@
   transform: translate(0);
   box-shadow: none;
 }
+
+.profile_picture {
+  margin-bottom: 20px;
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.profile_picture img {
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 1px solid #ad1db7;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
