fix: :bug: Fix - Button/ Annonces (center)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -149,7 +149,7 @@
     width: 100% !important;
     position: absolute;
     left: 0 !important;
-    top: 61px;
+    top: 57px;
   }
 
   .display-false {
@@ -163,9 +163,9 @@
     display: block;
   }
 
-  .header__nav .nav__list .nav__link:last-child {
-    margin-right: 50px;
-  }
+  // .header__nav .nav__list .nav__link:last-child {
+  //   margin-right: 50px;
+  // }
 
   .header__nav .nav__list {
     display: flex;
