--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -6,10 +6,11 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  gap: 75px;
   min-height: 80vh;
   &__title {
     font-size: 2rem;
+    margin: 25px;
   }
 
   &__card {
@@ -201,3 +202,37 @@ input {
     height: auto; /* Ajuste la hauteur automatiquement */
   }
 }
+@media screen and (max-width: 1250px) {
+.profile_container {
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    flex-direction: column;
+    align-items: center;
+}
+.profile_sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: #f4f4f4;
+  gap: 30px;
+}
+.edit__title {
+  font-size: 2rem;
+  margin: 25px;
+  text-align: center;
+}
+.edit__profile {
+  display: flex;
+  gap: 25px;
+  overflow-x: auto;
+}
+}
+
+@media screen and (max-width: 768px) {
+  .edit__form {
+    padding: 1em 0;
+  }
+}
+
