--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -111,3 +111,29 @@
   border-radius: 15px;
   margin-inline: 5px;
 }
+
+@media screen and (max-width: 1250px) {
+  .ranks{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile_main h1{
+    font-size: 2rem;
+    text-align: center;
+  }
+  .review_annonce{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+  .review_container{
+    height: 100vh;
+  }
+  .profilAnnonce_container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+}
