fix Connexion/edit profil - Mettre une color dans le placeholder des champs d'inscription

--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -129,6 +129,10 @@
     padding: 0.5em;
   }
 
+  .edit__form-select option {
+    background-color: #000;
+  }
+
   .edit__form-buttons,
   .edit__profile-card-buttons {
     margin-top: 2em;
