--- a/src/components/Profil/Review/Review.scss
+++ b/src/components/Profil/Review/Review.scss
@@ -14,7 +14,6 @@
 
 .review_container {
   font-family: 'Roboto', sans-serif;
-  width: 35%;
   padding: 10px;
   background-color: #f4f4f4;
   overflow-y: auto;
@@ -149,5 +148,23 @@
       background-color: $color-bg;
       border: 2px solid $color-DeepPurple;
     }
+  }
+}
+
+@media screen and (max-width: 975px) {
+  .review_annonce {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+  .review_container {
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    height: 250vh;
+    padding: 10px;
+    background-color: #f4f4f4;
+    overflow-y: auto;
   }
 }
