--- a/src/components/Profil/SideBar/Sidebar.scss
+++ b/src/components/Profil/SideBar/Sidebar.scss
@@ -84,8 +84,8 @@
 
 .profile_picture img {
   object-fit: cover;
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   border: 1px solid #ad1db7;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
