--- a/src/components/Profil/Review/Review.scss
+++ b/src/components/Profil/Review/Review.scss
@@ -14,6 +14,7 @@
 
 .review_container {
   font-family: 'Roboto', sans-serif;
+  width: 50%;
   padding: 10px;
   background-color: #f4f4f4;
   overflow-y: auto;
