--- a/src/components/Annonce/Annonce.scss
+++ b/src/components/Annonce/Annonce.scss
@@ -36,6 +36,8 @@
 
   .main_content {
     display: flex;
+    min-height: 100vh;
+    height: auto;
 
     .filters {
       display: flex;
@@ -43,7 +45,6 @@
       gap: 10px;
       padding: 20px;
       background-color: #1a1a1a;
-      height: 100vh;
 
       label {
         margin-bottom: 5px;
