fix: :bug: Contact Modal - Fix bug button

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -49,8 +49,9 @@
   cursor: pointer;
   transition: color 0.3s;
   font-size: 1.5em;
+  color: #ffffff;
 
   &:hover {
-    color: #ff0000;
+    color: #a45ddd;
   }
 }
