--- a/src/components/Profil/Contact/Contact.scss
+++ b/src/components/Profil/Contact/Contact.scss
@@ -31,6 +31,7 @@
     transition: all 0.3s;
     margin-top: 10px;
     padding: 5px 10px;
+    border: none;
 
     &:hover {
       background-color: #fff;
