--- a/src/components/Profil/Review/Review.scss
+++ b/src/components/Profil/Review/Review.scss
@@ -95,9 +95,9 @@
 
 // ------------------------------- Style du review Form -------------------------------------- //
 
-.review_title .modal-close:hover {
-  color: #a45ddd;
-}
+// .review_title .modal-close:hover {
+//   color: #a45ddd;
+// }
 
 .review__title {
   display: flex;
@@ -177,7 +177,7 @@
     gap: 25px;
   }
   .review_container {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     width: 100%;
     height: 250vh;
     padding: 10px;
