--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -34,6 +34,10 @@
           color: $color-bg;
         }
 
+        ::placeholder {
+          color: gray;
+        }
+
         .login__form-input {
           padding: 5px;
           border: none;
