--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -163,9 +163,10 @@
     display: block;
   }
 
-  // .header__nav .nav__list .nav__link:last-child {
-  //   margin-right: 50px;
-  // }
+  .header__nav .nav__list:first-child li,
+  .header__nav .nav__list .nav__link:last-child {
+    margin-right: 50px;
+  }
 
   .header__nav .nav__list {
     display: flex;
