--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -176,4 +176,9 @@
     gap: 20px;
     padding: 0;
   }
+  .header__nav .nav__list:nth-of-type(2) .na__link:first-child {
+    /* Sélectionne le premier .na__link dans le deuxième .nav__list */
+    text-align: center; /* Centre le texte */
+    margin: 0; /* Centre horizontalement */
+  }
 }
