fix searchbar responsive hp 2

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -27,11 +27,13 @@
 
       select {
         width: 50vw;
+        min-width: 200px;
         background-color: #1a1a1a;
         color: $color-white;
         border: 1px solid #1a1a1a;
         padding-top: 15px;
         padding-bottom: 15px;
+        padding-left: 15px;
         border-radius: 10px;
       }
 
