--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -113,7 +113,7 @@
   height: 80%;
 }
 
-.edit__form-button {
+.edit__form-platform .edit__form-button {
   margin-top: 2em;
   display: flex;
   justify-content: space-around;
@@ -133,6 +133,10 @@ select {
   border-radius: 5px;
   color: #fff;
   padding: 0.5em;
+
+  option {
+    background: black;
+  }
 }
 
 .edit__form_annonce label {
@@ -220,7 +224,7 @@ input {
 @media screen and (max-width: 1250px) {
   .profile_container {
     display: flex;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     flex-direction: column;
     align-items: center;
   }
