--- a/src/components/Annonce/Annonce.scss
+++ b/src/components/Annonce/Annonce.scss
@@ -129,7 +129,7 @@
   background-color: #fafafa;
   color: #333;
   text-align: center;
-  height: 300px;
+  height: auto;
   padding-bottom: 20px;
   padding-inline: 10px;
   display: flex;
